Passing two testsow, failing the rest. Focusing on message structure updates